--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -2,72 +2,95 @@
 title: "Interpreting Random Forest Predictions for Bullet Matching Using LIME (?)"
 author: "Katherine Goode and Heike Hofmann"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
-output: pdf_document
+output: 
+  pdf_document:
+    number_sections: true
 bibliography: references.bib
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
+```{r setup, include = FALSE}
+knitr::opts_chunk$set(echo = TRUE, eval = TRUE)
+
+# Load libraries
+library(dplyr)
+library(ggplot2)
 ```
 
-# Background/Literature Review
+# Introduction
 
-# Problem Statement
+- background
+- motivation
+- literature review
+- problem statement
 
-# Overview of LIME
+# Data
 
-# The Hamby 224 Clone
+## Training Data: The Hamby...
+
+## Testing Data: The Hamby 224 Clone
 
 The Hamby 224 Clone is organized as a test set of a cloned (sub-)set of the Hamby 224 bullets. As with all Hamby sets [@hamby], Hamby set 224, is a collection of 35 bullets, organized as 20 known bullets and 15 questioned bullets. The known bullets are fired in pairs of two through one of ten consecutively manufactures P-85 barrels.
 Clone set 224 is arranged as a test set of fifteen tests, one for each questioned bullet. Each test set is arranged as a combination of three bullets: two known bullets and a questioned bullet. The test asks for a decision on whether the questioned bullet comes from the same source as the two known bullets  or from a different source. This situation is similar to what a Firearms and Toolmarks Examiner might encounter in case work. 
 
-# Applying LIME
+#  Methods
+
+## Random Forest Model
+
+## Overview of LIME
+
+## Applying LIME
+
+## Visualizing the LIME Explanations
 
 ```{r}
 # Read in the Hamby 224 combined test data and explanations
 hamby224_test_explain <- readRDS("../data/hamby224_test_explain.rds")
-
-hamby224_test_explain %>% 
-  filter(set == "1") %>% 
-  select(case, bullet1:land2, rfscore) %>%
-  distinct() %>%
-  ggplot(aes(x = land1, y = land2)) + 
-  geom_tile(aes(fill = rfscore)) +
-  facet_grid(bullet1 ~ bullet2) +
-  theme_bw() + 
-  scale_fill_gradient2(low = "grey", high = "orange", midpoint = 0.5)
-
-hamby224_test_explain %>% 
-  filter(set == "1") %>% 
-  select(case, bullet1:land2, mypred) %>%
-  distinct() %>%
-  ggplot(aes(x = land1, y = land2)) + 
-  geom_tile(aes(fill = mypred)) +
-  facet_grid(bullet1 ~ bullet2) +
-  theme_bw() + 
-  scale_fill_gradient2(low = "grey", high = "orange", midpoint = 0.5)
-
-hamby224_test_explain %>% 
-  filter(set == "1") %>% 
-  select(case, bullet1:land2, label_prob) %>%
-  distinct() %>%
-  ggplot(aes(x = land1, y = land2)) + 
-  geom_tile(aes(fill = label_prob)) +
-  facet_grid(bullet1 ~ bullet2) +
-  theme_bw() + 
-  scale_fill_gradient2(low = "grey", high = "orange", midpoint = 0.5)
-
-hamby224_test_explain %>% 
-  filter(set == "1") %>% 
-  select(case, bullet1:land2, samesource) %>%
-  distinct() %>%
-  ggplot(aes(x = land1, y = land2)) + 
-  geom_tile(aes(fill = samesource)) +
-  facet_grid(bullet1 ~ bullet2) +
-  theme_bw() 
 ```
 
-# Results (using LIME on a TS)
+```{r}
+hamby224_test_explain %>%
+  filter(set == "1") %>%
+  select(case, bullet1:land2, rfscore) %>%
+  distinct() %>%
+  ggplot(aes(x = land1, y = land2)) +
+  geom_tile(aes(fill = rfscore)) +
+  facet_grid(bullet1 ~ bullet2) +
+  theme_bw() +
+  scale_fill_gradient2(low = "grey", high = "orange", midpoint = 0.5)
+
+hamby224_test_explain %>%
+  filter(set == "1") %>%
+  select(case, bullet1:land2, mypred) %>%
+  distinct() %>%
+  ggplot(aes(x = land1, y = land2)) +
+  geom_tile(aes(fill = mypred)) +
+  facet_grid(bullet1 ~ bullet2) +
+  theme_bw() +
+  scale_fill_gradient2(low = "grey", high = "orange", midpoint = 0.5)
+
+hamby224_test_explain %>%
+  filter(set == "1") %>%
+  select(case, bullet1:land2, label_prob) %>%
+  distinct() %>%
+  ggplot(aes(x = land1, y = land2)) +
+  geom_tile(aes(fill = label_prob)) +
+  facet_grid(bullet1 ~ bullet2) +
+  theme_bw() +
+  scale_fill_gradient2(low = "grey", high = "orange", midpoint = 0.5)
+
+hamby224_test_explain %>%
+  filter(set == "1") %>%
+  select(case, bullet1:land2, samesource) %>%
+  distinct() %>%
+  ggplot(aes(x = land1, y = land2)) +
+  geom_tile(aes(fill = samesource)) +
+  facet_grid(bullet1 ~ bullet2) +
+  theme_bw()
+```
+
+# Results
+
+# Discussion
 
 # References
 
