--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -9,12 +9,13 @@ bibliography: references.bib
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo = TRUE, eval = TRUE)
+knitr::opts_chunk$set(echo = TRUE, eval = TRUE, cache = TRUE)
 
 # Load libraries
-library(dplyr)
-library(ggplot2)
+library(tidyverse)
+library(bulletr)
 library(lime)
+library(randomForest)
 ```
 
 # Introduction
@@ -45,6 +46,62 @@ Clone set 224 is arranged as a test set of fifteen tests, one for each questione
 
 #  Methods
 
+```{r echo = FALSE}
+
+# Cleaning the Hamby 224 data -------------------------------------------------
+
+# Load in the Hamby 224 datasets
+hamby224_set1 <- readRDS("../data/h224-set1-features.rds")
+hamby224_set11 <- readRDS("../data/h224-set11-features.rds")
+
+# Obtain features used when fitting the rtrees random forest
+rf_features <- rownames(rtrees$importance)
+
+# Clean the Hamby 224 set 1 data
+hamby224_set1_cleaned <- hamby224_set1 %>%
+  select(-bullet_score, -land1, -land2, -aligned, -striae, -features) %>%
+  rename(bullet1 = bulletA,
+         bullet2 = bulletB, 
+         land1 = landA,
+         land2 = landB) %>%
+  mutate(study = factor("Hamby_224"), 
+         set = factor("1"),
+         bullet1 = factor(bullet1),
+         bullet2 = factor(bullet2),
+         land1 = factor(land1),
+         land2 = factor(land2)) %>%
+  select(study, set, bullet1:land2, rf_features, rfscore, samesource)
+
+# Clean the Hamby 224 set 11 data
+hamby224_set11_cleaned <- hamby224_set11 %>%
+  select(-bullet_score, -land1, -land2, -aligned, -striae, -features) %>%
+  rename(bullet1 = bulletA,
+         bullet2 = bulletB, 
+         land1 = landA,
+         land2 = landB) %>%
+  mutate(study = factor("Hamby_224"), 
+         set = factor("2"),
+         bullet1 = recode(factor(bullet1), 
+                          "Bullet 1" = "1", 
+                          "Bullet 2" = "2", 
+                          "Bullet I" = "I"),
+         bullet2 = recode(factor(bullet2), 
+                          "Bullet 1" = "1", 
+                          "Bullet 2" = "2", 
+                          "Bullet I" = "I"),
+         land1 = recode(factor(land1), 
+                        "Land 1" = "1", "Land 2" = "2", "Land 3" = "3", 
+                        "Land 4" = "4", "Land 5" = "5", "Land 6" = "6"),
+         land2 = recode(factor(land2), 
+                        "Land 1" = "1", "Land 2" = "2", "Land 3" = "3", 
+                        "Land 4" = "4", "Land 5" = "5", "Land 6" = "6")) %>%
+  select(study, set, bullet1:land2, rf_features, rfscore, samesource)
+
+# Join the two cleaned Hamby 224 sets into one testing set
+hamby224_test <- suppressWarnings(bind_rows(hamby224_set1_cleaned,
+                                            hamby224_set11_cleaned))
+```
+
 ## Random Forest Model
 
 (fill in once the new random forest model has been fit)
@@ -53,16 +110,75 @@ Clone set 224 is arranged as a test set of fifteen tests, one for each questione
 
 ## Applying LIME
 
+```{r echo = FALSE}
+
+# Applying LIME -------------------------------------------------
+
+# Load in the training data (Hamby Data 173 and 252)
+hamby173and252_train <- read.csv("../data/hamby173and252_train.csv")
+
+# Apply the lime function from the lime package (with a seed set)
+# Note that the as_classifier must be added since rtrees is from the
+# randomForest package and not fit using caret or one of the other 
+# available models specified in the lime package. Additionally, the
+# randomForest package must be loaded in order to run the functions
+# from the lime package. (I should check on exactly how this works.)
+set.seed(84902)
+hamby224_lime <- lime(x = hamby173and252_train %>% select(rf_features),
+                      model = as_classifier(rtrees))
+
+# Apply the explain function from the lime package (with a seed set)
+set.seed(84902)
+hamby224_explain <- lime::explain(hamby224_test %>% select(rf_features), 
+                                  hamby224_lime, 
+                                  n_labels = 1, 
+                                  n_features = 3)
+
+# Add a case variable to the test data
+hamby224_test <- hamby224_test %>%
+  mutate(case = as.character(1:dim(hamby224_test)[1])) %>%
+  select(case, study:samesource)
+
+# Obtain features used when fitting the rtrees random forest
+rf_features <- rownames(rtrees$importance)
+
+# Join the data and the explanations and edit and add additional variables
+hamby224_test_explain <- full_join(hamby224_test, hamby224_explain, by = "case") %>%
+  mutate(case = factor(case),
+         set = factor(set),
+         bullet1 = factor(bullet1),
+         bullet2 = factor(bullet2),
+         land1 = factor(land1),
+         land2 = factor(land2)) %>%
+  mutate(mypred = rep(predict(rtrees, hamby224_test %>% select(rf_features), 
+                              type = "prob")[,2], each = 3)) %>%
+  select(case:rfscore, mypred, samesource:prediction)
+
+hamby224_test_explain$feature_desc <- factor(hamby224_test_explain$feature_desc)
+hamby224_test_explain$feature <- factor(hamby224_test_explain$feature)
+
+hamby224_test_explain$feature_number <- readr::parse_number(hamby224_test_explain$feature_desc)
+hamby224_test_explain$strictly_less <- FALSE
+hamby224_test_explain$strictly_less[grep("< ", hamby224_test_explain$feature_desc)] <- TRUE
+
+hamby224_test_explain <- hamby224_test_explain %>%
+  mutate(
+    feature_desc = reorder(feature_desc, strictly_less),
+    feature_desc = reorder(feature_desc, feature_number),
+    feature_desc = reorder(feature_desc, as.numeric(feature))
+  )
+```
+
 ## Visualizing the LIME Explanations
 
 Some plots to tryout working with the new explanations...
 
 ```{r}
-# Read in the Hamby 224 combined test data and explanations
-hamby224_test_explain <- readRDS("../data/hamby224_test_explain.rds")
-```
+hamby224_test_explain %>%
+  ggplot(aes(x = feature_desc)) + 
+  geom_bar() +
+  coord_flip()
 
-```{r}
 hamby224_test_explain %>%
   filter(set == "1") %>%
   select(case, bullet1:land2, rfscore) %>%
